--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.9.3",
     "ky": "^0.33.3",
     "ky-universal": "^0.12.0",
     "react": "^18.2.0",
