--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-search-autocomplete": "^8.5.2"
+    "react-search-autocomplete": "^8.5.2",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
