--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-search-autocomplete": "^8.5.2",
     "react-virtualized-auto-sizer": "^1.0.20",
     "react-window": "^1.8.9"
