--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-table": "^8.9.3",
     "chart.js": "^4.3.3",
+    "immer": "^10.0.3",
     "ky": "^0.33.3",
     "ky-universal": "^0.12.0",
     "react": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-error-boundary": "^4.0.12",
     "react-search-autocomplete": "^8.5.2",
     "react-virtualized-auto-sizer": "^1.0.20",
-    "react-window": "^1.8.9"
+    "react-window": "^1.8.9",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
